--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<div class="main-page container", style="margin-top: 3%;">
+<div class="main-container container">
     <div class="row">
-        <div class="col-4">
+        <div class="col-5 m-4">
             <h1 class="main-page-title">BChainChat</h1>
             <br />
             <p class="about-us">Want to connect with other Blockchain enthusiasts?
@@ -11,11 +11,11 @@
             <br />
             Then you found the perfect application. Here we let you create an account, then Sign in with MetaMask wallet and start chatting, posting, RSVP to events or just brows through other users posts!</p>
             <br />
-            <p class="login-paragraph"> So what are you waiting for.....Login or sign up to start exploring the amazing world of Blockchain!</p>
+            <p class="abou-us"> So what are you waiting for.....Login or sign up to start exploring the amazing world of Blockchain!</p>
         </div>
 
         <div class="col-4 ">
-            <%= image_tag 'landing_page_1.jpg', style: "margin: 18%; width: 50vh; height: 30vh;"%>
+            <%= image_tag 'homepage.jpg', style: "margin: 20% 10% 0 20%; width: 45vh; height: 32vh;"%>
         </div>
     </div>
 </div>
