--- a/app/views/user_profiles/profile.html.erb
+++ b/app/views/user_profiles/profile.html.erb
@@ -1,4 +1,4 @@
-<div class="container", style="margin-top: 3%;">
+<div class="container rounded bg-white mt-5 mb-5 main-container", style="margin-top: 3%;">
     
     <% if current_user %>
 
