--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,14 +1,14 @@
 <% if resource.errors.any? %>
   <div id="error_explanation">
-    <h2>
+    <h5 style="color: red; margin-top: 2%; text-align: center;">
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
-    </h2>
-    <ul>
+    </h5>
+    <ul style="color: red; font-size: 12px;">
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li>*<%= message %></li>
       <% end %>
     </ul>
   </div>
