--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container", style="margin-top: 3%;">
   <div class="row p-2 bg-light border">
     <div class="col">
       <div style="margin-bottom: 8%;" >
@@ -6,15 +6,17 @@
         <%= link_to "+ Create new event", new_event_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right;" %>
       </div>
     </div>
-
-    <div id="events" >
-      <% @events.each do |event| %>
-        <%= render event %>
-        <p style="margin-bottom: 5%;">
-          <%= link_to "Show this event", event, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right;" %>
-        </p>
-        <hr />
-      <% end %>
-    </div>
+    
+    <% if current_user  %>
+      <div id="events" >
+        <% @events.each do |event| %>
+          <%= render event %>
+          <p style="margin-bottom: 5%;">
+            <%= link_to "Show this event", event, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right;" %>
+          </p>
+          <hr />
+        <% end %>
+      </div>
+    <% end %>
   </div>
 </div>
