--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
     <% if notice %>
-        <p class="alert alert-success" style="color: purple;"><%= notice %></p>
+        <p class="alert alert-success"><%= notice %></p>
     <% end %>
 
     <% if alert %>
-    <p class="alert alert-danger" style="color: red;><%= alert %></p>
+    <p class="alert alert-danger"><%= alert %></p>
     <% end %>
 
 </div>
