--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,24 +1,23 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #39023A; padding: 20px;">
     <div class="container-fluid">
-          <%= link_to image_tag("BChainChat_Logo_white.png"), root_path, style: "margin-left: 0px", class:"logo-img"%>
+          <%= link_to image_tag("BChainChat_Logo_white.png"), root_path, style: "margin-left: 0px;", class:"logo-img"%>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
         <% if user_signed_in? %>
-          <li class="nav-item active ">
+          <li class="nav-item ">
             <%= link_to 'User Profile', user_profile_path(current_user), class:"nav-link" %>
           </li>
           <li class="nav-item " >
             <%= link_to 'Timeline', posts_path, class:"nav-link" %>
           </li>
           <li class="nav-item " >
-            <%#= link_to 'News', news_path,  class:"nav-link" %>
-            <%= link_to 'News', 'http://localhost:3001/' %>
+            <%= link_to 'News', 'http://localhost:3001/', class:"nav-link" %>
           </li>
           <li class="nav-item " >
             <%= link_to 'Events', events_path,  class:"nav-link" %>
