--- a/app/views/dashboards/_dashboard.html.erb
+++ b/app/views/dashboards/_dashboard.html.erb
@@ -1,3 +1,3 @@
-<div class="container">
-  <%= link_to dashboard.name, dashboard %>
+<div class="container" style="margin: 3% 0%;">
+  <%= link_to dashboard.name, dashboard, class: "btn",style:"text-decoration: none; color: #39023A; font-weight: bold;" %>
 </div>
