--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,9 +1,9 @@
-<div id="chatroom_container" class=" row ">
-    <div id="side_panel" class="col-md-4 col-sm-4">
+<div id="chatroom_container" class=" row " style=" height: 82vh margin-right: 0px !important; overflow-x: hidden; overflow-y: hidden; background-color: #ffffff; ">
+    <div id="side_panel" class="col-md-4 col-sm-4 " style="  height: 82vh; margin-right: 0px !important; overflow-x: hidden; overflow-y: scroll; margin-bottom: 55px;">
     <br />
-        <h5 class="container">Current user: <%= current_user.screen_name %></h5>
+        <h5 class="container" style="background-color: #39023A; color: #ffffff; margin: 10% 5% 15% 0%; padding: 8px 15px; border-radius: 5px;"><%= current_user.screen_name %></h5>
 
-        <h5 class="container"> Your Contacts </h5>
+        <h5 class="container" style="color: #39023A; text-decoration: underline;"> Your Contacts </h5>
         <%= turbo_stream_from "users" %>
         <div id="users">
             <%= render @users %>
@@ -11,7 +11,7 @@
 
         <br />
         <br />
-        <h5 class="container"> Public Groups </h5>
+        <h5 class="container" style="color: #39023A; text-decoration: underline;"> Public Groups </h5>
  
         <%= turbo_stream_from "dashboards" %>
         <% if current_user.admin? %>
@@ -22,12 +22,12 @@
         </div> 
     </div>
 
-    <div id="dashboard_container" class="col-md-8 col-sm-8 ">
+    <div id="dashboard_container" class="col-md-8 col-sm-8 " style=" height: 85vh; margin-right: 0px !important;">
         <% if @single_dashboard %>
-            <div id="single_room">
+            <div id="single_dashboard" style="height: calc(82vh - 120px);">
                 <h4 class="text-center"> <%= @user&.screen_name || @single_dashboard.name %> </h4>
                 <%= turbo_stream_from @single_dashboard %>
-                <div id="messages" data-controller="scroll">
+                <div id="messages" data-controller="scroll" style="  height: calc(82vh - 120px); overflow-x: hidden; overflow-y: scroll; scrollbar-color: #ffffff #39023A;">
                     <%= render @messages %>
                 </div>
                 <%= render 'layouts/new_message_form' %>
