--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,3 @@
-<div class="container">
-  <%= link_to user.screen_name, user %>
+<div class="container" style="margin: 3% 0%;" >
+  <%= link_to user.screen_name, user, class: "btn",style:"text-decoration: none; color: #39023A; font-weight: bold;"%>
 </div>
