--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,22 +1,24 @@
 <div class="container", style="margin-top: 3%;">
   <div class="row p-2 bg-light border">
-    <div class="col">
+    <div class="col-12">
       <div style="margin-bottom: 8%;" >
         <h3>Check out the latest events</h3>
         <%= link_to "+ Create new event", new_event_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right;" %>
       </div>
     </div>
-    
     <% if current_user  %>
       <div id="events" >
-        <% @events.each do |event| %>
-          <%= render event %>
-          <p style="margin-bottom: 5%;">
-            <%= link_to "Show this event", event, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right;" %>
-          </p>
-          <hr />
-        <% end %>
+        <div class="col">
+          <% @events.each do |event| %>
+            <%= render event %>
+            <p style="margin-bottom: 5%;">
+              <%= link_to "Show this event", event, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none;" %>
+            </p>
+            <hr />
+          <% end %>
+        </div>
       </div>
     <% end %>
   </div>
 </div>
+
