--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,14 +1,12 @@
 <div class="container">
   <div class="row"> 
-    <div class="col">   
-      <h1>New event</h1>
+    <div class="col" style="margin-top: 3%;">   
+      <h1>Create New Event</h1>
 
       <%= render "form", event: @event %>
 
-      <br>
-
       <div>
-        <%= link_to "Back", events_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right;" %>
+        <%= link_to "Back", events_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right; border-radius: 5px; margin: 8rem 3rem 0rem 0rem;" %>
       </div>
     </div>
   </div>
