--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="main-container container">
-    <div class="row">
+    <div class="row" style="margin: 2rem 6rem;">
         <div class="col-5 m-4">
             <h1 class="main-page-title">BChainChat</h1>
             <br />
