--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -3,25 +3,46 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">
+  <div class="form-inputs" style="width: 100%; max-width: 98rem; padding: 2rem 5rem; background-color: #F2F2F2; box-shadow: 0 0 8px 3px rgba(0,0,0,.3);  align-items: center; border-radius: .8rem; margin: 3% 0%;">
 
-    <div>
-      <% if event.image?%>
-        <img src= "<%= event.image %>" style="height: 50vh; width: 60vh; margin: 2%;" ><br />
-      <% end %>
-      <%= f.file_field :image %>
+
+    <div class="row">
+      <div class="col-6">
+        <%= f.input :title %>
+      </div>
+    
+      <div class="col-6">
+        <% if event.image?%>
+          <img src= "<%= event.image %>" style="height: 50vh; width: 60vh; margin: 2%;" ><br />
+        <% end %><br />
+        <%= f.file_field :image %>
+      </div>
+      <br />
+
+      <div class="col-6">
+        <%= f.input :date %><br />
+      </div>
+
+      <div class="col-6">
+        <%= f.input :time %><br />
+      </div>
+
+      <div class="col-6">
+        <%= f.input :location %><br />
+      </div>
+
+      <div class="col-6">
+        <%= f.input :description %>
+      </div>
+
+      <div class="col-6">
+        <%= f.input :limit %><br />
+      </div>
+
     </div>
-    <br />
-
-    <%= f.input :title %>
-    <%= f.input :date %>
-    <%= f.input :time %>
-    <%= f.input :location %>
-    <%= f.input :description %>
-    <%= f.input :limit %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right; margin-top: 10%;" %>
+    <%= f.button :submit, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right; margin-top: 10%;"  %>
   </div>
 <% end %>
