--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container", style="margin-top: 3%;">
-  <div class="row p-2 bg-light border">
+  <div class="row p-2 ">
     <div class="col-12">
-      <div style="margin-bottom: 8%;" >
+      <div style="margin-bottom: 8%; text-align: center;" >
         <h3>Check out the latest events</h3>
-        <%= link_to "+ Create new event", new_event_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right;" %>
+        <%= link_to "+ Create new event", new_event_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right; border-radius: 5px; margin-right: 1rem;" %>
       </div>
     </div>
     <% if current_user  %>
@@ -12,7 +12,7 @@
           <% @events.each do |event| %>
             <%= render event %>
             <p style="margin-bottom: 5%;">
-              <%= link_to "Show this event", event, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none;" %>
+              <%= link_to "Show this event", event, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; border-radius: 5px; margin-left: 1rem;" %>
             </p>
             <hr />
           <% end %>
