--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -34,7 +34,7 @@
               </div>
             
               <div class="col-md-12 ", style="margin: 10% 0% 8% 0%; ">
-                <%= form.text_area :comment, class: "form-control" %>
+                <%= form.text_area :comment, style:"width: 100%; max-width: 98rem; padding: 2rem 1rem 10rem 1rem; background-color: #F2F2F2; box-shadow: 0 0 8px 3px rgba(0,0,0,.3); align-items: center; border-radius: .8rem; margin: 3% 0%;" %>
               </div>
             </div>
 
