--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,10 @@
-<div class="container rounded bg-white mt-5 mb-5 main-container">
+<div class="container mt-5 ">
 
   <div class="row">
     <div class="col-md-8 border-right">
       <div class="row mt-2">
          <h3>Create New Post</h3>
-        <div class="col-md-10 form-control", style=" margin: 2% 2% 10% 1.5%;">
+        <div class="col-md-10", style="width: 100%; max-width: 98rem; padding: 2rem 2rem 3rem 5rem; background-color: #F2F2F2; box-shadow: 0 0 8px 3px rgba(0,0,0,.3); display: flex; align-items: center; border-radius: .8rem; margin: 3rem 0rem;">
 
           <%= render "form", post: @post %>
 
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div>
-      <%= link_to "Back to posts", posts_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 25px; text-decoration: none; border-radius: 8px;"  %>
+      <%= link_to "Back to posts", posts_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 25px; text-decoration: none; border-radius: 5px;" %>
     </div>
   </div>
 </div>
