--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,33 +1,40 @@
-<div class="container">
+<div class="container ">
+  <div >
+    <div>
+      <%= render @post %>
 
-  <%= render @post %>
-
-  <% if current_user && current_user == @post.user %>
-    <div class="container">
-      <div class="row">
-          <div class="col">
-            <%= link_to "Edit this post", edit_post_path(@post), style: "background-color: #39023A; color: #ffffff; padding: 8px; text-decoration: none;" %> 
-          </div>
-
-          <div class="col">
-            <%= link_to "Back to posts", posts_path, style: "background-color: #39023A; color: #ffffff; padding: 8px; text-decoration: none;"  %>
-          </div>
-
-          <div class="col">
-            <%= button_to "Delete", @post, method: :delete, style: "background-color: #39023A; color: #ffffff;" %>
+      <div class="container">
+        <div class="row">
+          <div class="col" style="margin-bottom: 3rem;">
+            <%= link_to "Back to posts", posts_path, style: "background-color: #39023A; color: #ffffff; padding: 8px; text-decoration: none;  border-radius: 5px;" %>
           </div>
         </div>
-    </div>
-  <% end %>
+      </div>  
 
-  <section class="section comments">
-    <div class="container">
-      <br />
-      <h6 class="subtitle is-5"><strong><%= @post.replies.count %></strong> Replies</h6>
-      <%= render @post.replies %>
-      <div class="comment-form">
-        <%= render 'replies/form' %>
-      </div>
+      <% if current_user && current_user == @post.user %>
+        <div class="container ">
+          <div class="row">
+              <div class="col-6">
+                <%= link_to "Edit this post", edit_post_path(@post), style: "background-color: #39023A; color: #ffffff; padding: 8px; text-decoration: none;  border-radius: 5px;" %> 
+              </div>
+
+              <div class="col-6">
+                <%= button_to "Delete", @post, method: :delete, style: "background-color: #39023A; color: #ffffff; border-radius: 5px;" %>
+              </div>
+            </div>
+        </div>
+      <% end %>
+
+      <section class="section comments">
+        <div class="container">
+          <br />
+          <h6 style="text-decoration: underline;"><strong>REPLIES:</strong></h6>
+          <%= render @post.replies %>
+          <div class="comment-form">
+            <%= render 'replies/form' %>
+          </div>
+        </div>
+      </section>
     </div>
-  </section>
+  </div>
 </div>
