--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,37 +1,40 @@
-<div id="chatroom_container" class=" row " style=" height: 82vh margin-right: 0px !important; overflow-x: hidden; overflow-y: hidden; background-color: #ffffff; ">
-    <div id="side_panel" class="col-md-4 col-sm-4 " style="  height: 82vh; margin-right: 0px !important; overflow-x: hidden; overflow-y: scroll; margin-bottom: 55px;">
-    <br />
-        <h5 class="container" style="background-color: #39023A; color: #ffffff; margin: 10% 5% 15% 0%; padding: 8px 15px; border-radius: 5px;"><%= current_user.screen_name %></h5>
+<div class="conrainer" style="margin-top: 3%;">
+    <div style="width: 100%; max-width: 98rem; padding: 2rem 5rem; background-color: #F2F2F2; box-shadow: 0 0 8px 3px rgba(0,0,0,.3); border-radius: .8rem; ">
+    <div id="chatroom_container" class=" row" style=" height: 82vh margin-right: 0px !important; overflow-x: hidden; overflow-y: hidden; background-color: #ffffff; ">
+        <div id="side_panel" class="col-md-4 col-sm-4 " style="  height: 82vh; margin-right: 0px !important; overflow-x: hidden; overflow-y: scroll; margin-bottom: 55px;">
+            <br />
+            <h5 class="container" style="background-color: #39023A; color: #ffffff; margin: 10% 5% 15% 0%; padding: 8px 15px; border-radius: 5px;"><%= current_user.screen_name %></h5>
 
-        <h5 class="container" style="color: #39023A; text-decoration: underline;"> Your Contacts </h5>
-        <%= turbo_stream_from "users" %>
-        <div id="users">
-            <%= render @users %>
+            <h5 class="container" style="color: #39023A; text-decoration: underline;"> Your Contacts </h5>
+            <%= turbo_stream_from "users" %>
+            <div id="users">
+                <%= render @users %>
+            </div>
+
+            <br />
+            <br />
+            <h5 class="container" style="color: #39023A; text-decoration: underline;"> Public Groups </h5>
+    
+            <%= turbo_stream_from "dashboards" %>
+            <% if current_user.admin? %>
+                <%= render 'layouts/new_dashboard_form' %>
+            <% end %>
+            <div id="dashboards">
+                <%= render @dashboards %>
+            </div> 
         </div>
 
-        <br />
-        <br />
-        <h5 class="container" style="color: #39023A; text-decoration: underline;"> Public Groups </h5>
- 
-        <%= turbo_stream_from "dashboards" %>
-        <% if current_user.admin? %>
-            <%= render 'layouts/new_dashboard_form' %>
-        <% end %>
-        <div id="dashboards">
-            <%= render @dashboards %>
-        </div> 
-    </div>
-
-    <div id="dashboard_container" class="col-md-8 col-sm-8 " style=" height: 85vh; margin-right: 0px !important;">
-        <% if @single_dashboard %>
-            <div id="single_dashboard" style="height: calc(82vh - 120px);">
-                <h4 class="text-center"> <%= @user&.screen_name || @single_dashboard.name %> </h4>
-                <%= turbo_stream_from @single_dashboard %>
-                <div id="messages" data-controller="scroll" style="  height: calc(82vh - 120px); overflow-x: hidden; overflow-y: scroll; scrollbar-color: #ffffff #39023A;">
-                    <%= render @messages %>
+        <div id="dashboard_container" class="col-md-8 col-sm-8 " style=" height: 85vh; margin-right: 0px !important;">
+            <% if @single_dashboard %>
+                <div id="single_dashboard" style="height: calc(82vh - 120px);">
+                    <h4 class="text-center"> <%= @user&.screen_name || @single_dashboard.name %> </h4>
+                    <%= turbo_stream_from @single_dashboard %>
+                    <div id="messages" data-controller="scroll" style="  height: calc(82vh - 120px); overflow-x: hidden; overflow-y: scroll; scrollbar-color: #ffffff #39023A;">
+                        <%= render @messages %>
+                    </div>
+                    <%= render 'layouts/new_message_form' %>
                 </div>
-                <%= render 'layouts/new_message_form' %>
-            </div>
-        <% end %>
+            <% end %>
+        </div>
     </div>
 </div>
