--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="main-container container">
-    <div class="row" style="margin: 2rem 6rem;">
+    <div class="row" style="width: 100%; max-width: 98rem; padding: 2rem 5rem; background-color: #F2F2F2; box-shadow: 0 0 8px 3px rgba(0,0,0,.3); display: flex; align-items: center; border-radius: .8rem; margin: 3% 0%;">
         <div class="col-5 m-4">
             <h1 class="main-page-title">BChainChat</h1>
             <br />
@@ -15,7 +15,7 @@
         </div>
 
         <div class="col-4 ">
-            <%= image_tag 'homepage.jpg', style: "margin: 20% 10% 0 20%; width: 45vh; height: 32vh;"%>
+            <%= image_tag 'homepage.jpg', style: "margin: 8% 10% 0 20%; width: 45vh; height: 32vh;"%>
         </div>
     </div>
 </div>
