--- a/app/views/user_profiles/profile.html.erb
+++ b/app/views/user_profiles/profile.html.erb
@@ -1,58 +1,62 @@
-<div class="container rounded bg-white mt-5 mb-5 main-container", style="margin-top: 3%;">
+<div class="container", style="margin-top: 3%;">
+    <div style="width: 101%; max-width: 98rem; padding: 2rem 5rem; background-color: #F2F2F2; box-shadow: 0 0 8px 3px rgba(0,0,0,.3); display: flex; align-items: center; border-radius: .8rem; ">
     
-    <% if current_user %>
+        <div class="row">
+            <% if current_user %>
 
-        <% if current_user.image?%>
-            <div >
-                <img class="rounded-circle" src= "<%= current_user.image  %>" style="height: 100px; width: 100px; margin: 0;" >
+                <% if current_user.image?%>
+                    <div >
+                        <img class="rounded-circle" src= "<%= current_user.image  %>" style="height: 100px; width: 100px; margin: 0;" >
+                    </div>
+                <% end %>
+                
+                <div class="row">
+                    <div class="col">
+                        <% if current_user.admin? %>
+                            <h4 style="margin-top: 5%;">Currently there are <%= User.count %> registered users on BChainChat!</h4>
+                            <br />
+                            <br />
+                            <%= link_to 'Review Event Submissions', events_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right;  border-radius: 5px;" %>
+                        <% end %>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-4 " style="margin: 2rem 0rem;">
+                        <strong><h3><%= current_user.first_name %> <%= current_user.last_name %></h3></strong>
+                        <br />
+                        <h5><%= current_user.email %> </h5>
+                        <br />
+                        <h5><i><%= current_user.bio %></i></h5>
+                        <br />
+                        <h5><%= current_user.country %></h5>
+                    </div>
+
+                    <div class="col-4">
+                        <%= link_to "Messages", dashboards_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right; margin-top: 10%;  border-radius: 5px;" %>
+                    </div>
+
+                    <div class="col-4">
+                        <%= link_to 'Attending Events', events_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; margin-top: 11%;  border-radius: 5px;" %>
+                    </div>
+                    <div class="col">
+                        <%= link_to 'Hosting Events', events_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; margin-top: -10%;  border-radius: 5px;" %>
+                    </div>
+                </div>
+                <br />
+                <br />
+                <div class="row">
+                    <div class="col-8" style="margin: 5rem 0rem;">
+                        <%= link_to 'Update Details', edit_user_registration_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none;  border-radius: 5px;" %>
+                    </div>
+
+                    <div class="col-4 ">
+                        <%= link_to '+Create Post', new_post_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; margin-top: 20%;  border-radius: 5px;" %>
+                    </div>
+
+                </div>
+                <br />
             </div>
         <% end %>
-        
-        <div class="row">
-            <div class="col">
-                <% if current_user.admin? %>
-                    <h4 style="margin-top: 5%;">Currently there are <%= User.count %> registered users on BChainChat!</h4>
-                    <br />
-                    <br />
-                    <%= link_to 'Review Event Submissions', events_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right;  border-radius: 5px;" %>
-                <% end %>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-6 ">
-                <strong><h3><%= current_user.first_name %> <%= current_user.last_name %></h3></strong>
-                <br />
-                <h5><%= current_user.email %> </h5>
-                <br />
-                <h5><i><%= current_user.bio %></i></h5>
-                <br />
-                <h5><%= current_user.country %></h5>
-            </div>
-
-            <div class="col-2">
-                <%= link_to "Messages", dashboards_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right; margin-top: 10%;  border-radius: 5px;" %>
-            </div>
-
-            <div class="col-4">
-                <%= link_to 'Attending Events', events_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; margin-top: 10%;  border-radius: 5px;" %>
-            </div>
-            <div class="col">
-                <%= link_to 'Hosting Events', events_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; margin-top: -5%;  border-radius: 5px;" %>
-            </div>
-        </div>
-        <br />
-        <br />
-        <div class="row">
-            <div class="col-8">
-                <%= link_to 'Update Details', edit_user_registration_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none;  border-radius: 5px;" %>
-            </div>
-
-            <div class="col ">
-                <%= link_to '+Create Post', new_post_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; margin-top: 20%;  border-radius: 5px;" %>
-            </div>
-
-        </div>
-        <br />
-    <% end %>
+    </div>
 </div>
