--- a/bchainchat-react/src/components/api_calls/CryptoApi.css
+++ b/bchainchat-react/src/components/api_calls/CryptoApi.css
@@ -28,7 +28,7 @@
 }
 
 .news .col-2:hover {
-    box-shadow: rgb(0 0 0 / 20%) 0px 8px 24px;
+    box-shadow: 0 0 8px 3px rgba(0,0,0,.3);
 }
 
 .news .col-2 .news-img {
