added extra styling, fixed the update events button and now works, deleted local host links, changed package.json file in react

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -4,11 +4,11 @@
 
     <%= render "form", event: @event %>
 
-    <div style="margin-top: -8rem;">
+    <div >
 
-      <%= link_to "Back to all posts", events_path, style: "background-color: #39023A; color: #ffffff; padding: 8.8px 30px; text-decoration: none; border-radius: 5px; margin: 5.4rem 12rem 0rem 3rem; float: right;" %>
+      <%= link_to "Back to all posts", events_path, style: "background-color: #39023A; color: #ffffff; padding: 8.8px 30px; text-decoration: none; border-radius: 5px; margin: -2.5rem 12rem 0rem 2.5rem; float: right;" %>
 
-      <%= link_to "Back", @event, style: "background-color: #39023A; color: #ffffff; padding: 8.8px 30px; text-decoration: none; border-radius: 5px; margin: 5.4rem 0rem 0rem 0rem; float: right;" %> 
+      <%= link_to "Back", @event, style: "background-color: #39023A; color: #ffffff; padding: 8.8px 30px; text-decoration: none; border-radius: 5px; margin: -2.5rem 0rem 0rem 0rem; float: right;" %> 
       
     </div>
     <br />
