--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,11 @@
-<div class="container rounded bg-white mt-5 mb-5 main-container">
+<div class="container">
 
   <div class="row">
     <div id="posts" >
 
       <div class="row">
-        <div class="col">
-          <%= link_to "+ Create post", new_post_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; border-radius: 5px;" %>
+        <div class="col mt-5">
+          <%= link_to "+ Create post", new_post_path, style: "background-color: #39023A; color: #ffffff; padding: 10px 30px; text-decoration: none; float: right; border-radius: 5px; margin-right: 1rem;" %>
         </div>
       </div>
 
