--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container", style="margin-top: 3%;">
+<div class="container mt-5">
   <div class="row p-2 ">
     <div class="col-12">
       <div style="margin-bottom: 8%; text-align: center;" >
