--- a/app/views/layouts/_new_dashboard_form.html.erb
+++ b/app/views/layouts/_new_dashboard_form.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <%= form_with(model: @dashboard, remote: true, class:'d-flex', data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset"}) do |f| %>
     <%= f.text_field :name, class: 'form-control', autocomplete: 'off' %>
-    <%= f.submit data: {disable_with: false} %>
+    <%= f.submit data: {disable_with: false}, style: "background-color: #39023A; color: #ffffff; border-radius: 5px; margin-left: 1rem;" %> 
     <% end %>
 </div>
