--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,9 +1,8 @@
-<div class="container rounded bg-white  main-container">
+<div class="container">
 
-  <div class="row">
-    <div class="col-md-5 border-right">
+
       <div class="row ">
-        <div class="col-md-12 ">
+        <div class="col-8 ">
 
           <%= form_with(model: post) do |form| %>
             <% if post.errors.any? %>
@@ -18,9 +17,9 @@
               </div>
             <% end %>
 
-            <div class="row">
+            <div class="row" style="width: 100%; max-width: 98rem; padding: 0rem 3rem; background-color: #F2F2F2; box-shadow: 0 0 8px 3px rgba(0,0,0,.3);  align-items: center; border-radius: .8rem; margin: 3% 0%;">
 
-              <div class="col-md-12", style="margin-top: 8%;">
+              <div class="col-md-12", style="margin-top: 6%;">
                 <% if post.image?%>
                   <img src= "<%= post.image %>" style="height: 200px; width: 230px; margin: 0;" >
                 <% end %>
@@ -33,8 +32,8 @@
                 <%= form.date_field :post_date, value:Date.today.to_s, style: "display: none" %>
               </div>
             
-              <div class="col-md-12 ", style="margin: 10% 0% 8% 0%; ">
-                <%= form.text_area :comment, style:"width: 100%; max-width: 98rem; padding: 2rem 1rem 10rem 1rem; background-color: #F2F2F2; box-shadow: 0 0 8px 3px rgba(0,0,0,.3); align-items: center; border-radius: .8rem; margin: 3% 0%;" %>
+              <div class="col-md-12 ", style="margin: 5% 0% 5% 0%; ">
+                <%= form.text_area :comment, style:"width: 100%; max-width: 98rem; padding: 2rem 1rem 5rem 1rem; background-color: #F2F2F2; box-shadow: 0 0 8px 3px rgba(0,0,0,.3); align-items: center; border-radius: .8rem; margin: 3% 0%;" %>
               </div>
             </div>
 
@@ -44,7 +43,6 @@
           <% end %>
         </div>
       </div>
-    </div>
-  </div>
+
 </div> 
 
