--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,11 +1,10 @@
-<div class="container rounded bg-white mt-5 mb-5 main-container">
+<div class="container">
 
   <div class="row">
-    <div class="col-md-8 border-right">
+    <div class="col-12">
       <div class="row mt-2">
         <h3>Edit Post</h3>
-        <div class="col-md-10 form-control", style=" margin: 2% 2% 10% 1.5%;">
-
+        <div >
           <%= render "form", post: @post %>
 
         </div>
