--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container ">
+<div class="container mt-5">
   <div >
     <div>
       <%= render @post %>
@@ -33,6 +33,8 @@
           <div class="comment-form">
             <%= render 'replies/form' %>
           </div>
+          <br />
+          <br />
         </div>
       </section>
     </div>
