--- a/app/views/user_profiles/profile.html.erb
+++ b/app/views/user_profiles/profile.html.erb
@@ -13,7 +13,7 @@
                 <div class="row">
                     <div class="col">
                         <% if current_user.admin? %>
-                            <h4 style="margin-top: 5%;">Currently there are <%= User.count %> registered users on BChainChat!</h4>
+                            <h5 style="margin-top: 5%; color: purple;">***Currently there are <%= User.count %> registered users on BChainChat!</h5>
                             <br />
                             <br />
                             <%= link_to 'Review Event Submissions', events_path, style: "background-color: #39023A; color: #ffffff; padding: 8px 30px; text-decoration: none; float: right;  border-radius: 5px;" %>
@@ -25,7 +25,7 @@
                     <div class="col-4 " style="margin: 2rem 0rem;">
                         <strong><h3><%= current_user.first_name %> <%= current_user.last_name %></h3></strong>
                         <br />
-                        <h5><%= current_user.email %> </h5>
+                        <h5>" <%= current_user.screen_name %> "</h5>
                         <br />
                         <h5><i><%= current_user.bio %></i></h5>
                         <br />
