changed the routes back to localhost

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
             <%= link_to 'Timeline', posts_path, class:"nav-link" %>
           </li>
           <li class="nav-item " >
-            <%= link_to 'News', 'https://b-chainchat.herokuapp.com/', class:"nav-link" %>
+            <%= link_to 'News', 'http://localhost:3001/', class:"nav-link" %>
           </li>
           <li class="nav-item " >
             <%= link_to 'Events', events_path,  class:"nav-link" %>
